--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -90,7 +90,7 @@
     <ClCompile Include="Doit\012_17298.cpp">
       <Filter>소스 파일\Doit</Filter>
     </ClCompile>
-    <ClCompile Include="012_17298_sol.cpp">
+    <ClCompile Include="Doit\012_17298_sol.cpp">
       <Filter>소스 파일\Doit</Filter>
     </ClCompile>
   </ItemGroup>
